# locosigns-ws

./: .gitignore  readme.md
filter/: CMakeLists.txt  package.xml  readme.md
filter/src/: filter.py  filter_node.py  sim_no_ros.py  standalone_simulation.py
filter/src/modules/: filter.py
locosigns_filter/: package.xml  readme.md
locosigns_filter/scripts/: filter_node.py
locosigns_filter/scripts/modules/: filter.py
locosigns_filter/src/: backup_filter_node.py  filter_node.py  standalone_simulation.py
locosigns_filter/src/modules/: filter.py
locosigns_msg/: CMakeLists.txt  package.xml  readme.md
locosigns_msgs/: CMakeLists.txt  package.xml  readme.md
locosigns_msgs/msg/: Landmark.msg  Pose.msg  State.msg
locosigns_simulator/: CMakeLists.txt  package.xml  readme.md
locosigns_simulator/config/: simulation_params.yaml
locosigns_simulator/extra/: generate_nonlinear_landmarks.py  generate_nonlinear_world.py  landmarks.world  world_file.world
locosigns_simulator/launch/: debug.launch  filter.launch  gazebo_link.launch  road.launch  run.launch  sensors_sim.launch
locosigns_simulator/models/roads/: Roads.dae
locosigns_simulator/node/: sim_control_node.py  sim_error_node.py  sim_landmark_detector_node.py  sim_speedometer_node.py  sim_velocimeter_node.py  simulation_node.py
locosigns_simulator/node/modules/: pid.py
locosigns_simulator/plugins/: PriusHybridPlugin.cc
locosigns_simulator/rviz/: viz.rviz
locosigns_simulator/scripts/: sim_control_node_backwards.py  sim_control_node_forward.py  sim_error_node.py  sim_landmark_detector_node.py  sim_speedometer_node.py
locosigns_simulator/worlds/: linear_road_noisy.world  linear_road_perfect.world  non_linear_road.world  road.world
prius_control/: CMakeLists.txt  package.xml
prius_control/config/: prius_control.yaml
prius_control/launch/: prius_control.launch
prius_description/: CMakeLists.txt  package.xml
prius_description/urdf/: prius.urdf
prius_msgs/: package.xml
simulator/: CMakeLists.txt
simulator/launch/: road.launch
simulator/node/: controller_node.py  landmark_detector_node.py  simulation_node.py  velocimeter.py
