<package format="2">
  <name>locosigns_filter</name>
  <version>0.0.1</version>
  <description>
    Filters the robot position on the road given its velocity and detected landmarks
  </description>
  <maintainer email="carlos.andre.filho@usp.br">André Przewodowski</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>