<package format="2">
  <name>locosigns_simulator</name>
  <version>0.0.1</version>
  <description>
    Simulation of the robot's sensors' measurements and position on the world.
  </description>
  <maintainer email="carlos.andre.filho@usp.br">André Przewodowski</maintainer>
  <license>BSD</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>prius_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <exec_depend>fake_localization</exec_depend>
  <exec_depend>prius_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>