<package format="2">
  <name>prius_description</name>
  <version>0.0.1</version>
  <description>
  Provides a URDF for a prius
  </description>
  <maintainer email="sloretz@openrobotics.org">shane loretz</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <depend>prius_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>


</package>
